fix(title): add z-index

--- a/static/style.css
+++ b/static/style.css
@@ -41,6 +41,7 @@ body {
     top: 0;
     background-color: rgba(255, 255, 255, .8);
     backdrop-filter: blur(20px);
+    z-index: 1;
 }
 
 #devices-list #devices {
